# Student_Group-TUrtlES

./: README.md
turtles_base_controller/: CMakeLists.txt  package.xml
turtles_base_controller/include/: base_controller.hpp
turtles_base_controller/src/: base_controller.cpp
turtles_config/: CMakeLists.txt  amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml  teb_local_planner_params.yaml
turtles_filter/: CMakeLists.txt  package.xml
turtles_filter/src/: filter.cpp
turtles_goal_publisher/: CMakeLists.txt  package.xml
turtles_goal_publisher/include/: goal_publisher.hpp
turtles_goal_publisher/src/: goal_publisher.cpp
turtles_laserscan/: CMakeLists.txt  README.md  package.xml
turtles_laserscan/launch/: laserscan.launch
turtles_launch/: CMakeLists.txt  gyro_setup.sh  move_base_teb.launch  package.xml  robot.launch
turtles_launch/maps/: map24.yaml
turtles_parking/: .gitignore  CMakeLists.txt  README.md  package.xml  park.files  parking_in_src.files
turtles_parking/parking/: CMakeLists.txt
turtles_parking/parking/include/parking/: CHelpers.hpp  CMovement.hpp  CPIDController.hpp  CParkProcess.hpp  CParking.hpp  CScouting.hpp  CSensors.hpp  CSmoothing.hpp
turtles_parking/parking/src/: CMovement.cpp  CPIDController.cpp  CParkProcess.cpp  CParking.cpp  CScouting.cpp  CSensors.cpp
turtles_parking/src/: parking_node.cpp
turtles_pdcontrol/: CMakeLists.txt  package.xml
turtles_pdcontrol/include/: turtles_pdcontrol.hpp
turtles_pdcontrol/src/: turtles_pdcontrol.cpp
turtles_pdcontrol_cornerdetection/: CMakeLists.txt  package.xml
turtles_pdcontrol_cornerdetection/src/: turtles_pdcontrol_cornerdetection.cpp
turtles_robot_tf/: CMakeLists.txt  package.xml
turtles_robot_tf/src/: tf_broadcaster.cpp
