<package format="2">
  <name>turtles_goal_publisher</name>
  <version>0.1.0</version>
  <description>The turtles_goal_publisher package</description>
  <maintainer email="pmepme6@gmail.com">Francisco Medina</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geomerty_msgs</depend>
  <depend>message_runtime</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>

  <build_depend>roslaunch</build_depend>
</package>
